Thu Aug 26 23:58:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_key_press): Don't crash
	if model is not set. Noted by Mariano Suarez-Alvarez.

Thu Aug 26 22:44:12 2004  Matthias Clasen  <maclas@gmx.de>

	Provide information about how an adjustment change in a range 
	widget happened. Add a "slider-moved" signal which reports how 
	a user is interacting with the range, whether they are clicking 
	on a stepper or the trough, or dragging the slider.  (#133263,
	Thomas Fitzsimmons)

	* gtk/gtkmarshalers.list: Add signal type BOOLEAN:ENUM,DOUBLE.
	* gtk/gtkrange.c (gtk_range_class_init): Add "change-value"
	signal.
	(gtk_range_internal_set_value): Rename to
	gtk_range_real_change_value.  Add GtkScrollType parameter.  Emit
	the change-value signal when the range's value changes.
	(update_slider_position, gtk_range_scroll_event, step_back,
	step_forward, page_back, page_forward, scroll_begin,
	scroll_end): Change gtk_range_internal_set_value to
	gtk_range_real_change_value.
	* gtk/gtkrange.h (struct _GtkRangeClass): Declare change_value
	function.

2004-08-26  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/Makefile.am: Build imime.la on Windows.

	* modules/input/gtkimcontextime.h: 
	* modules/input/gtkimcontextime.c: 
	* modules/input/imime.c: 
	* modules/input/imm-extra.h: Add the IME input method for Win32
	written by Takuro Ashie and Kazuko IWAMOTO. The code was previously
	hosted at http://sourceforge.jp/projects/imime.  (#135195)

2004-08-26  Bill Haneman <billh@gnome.org>

	* gtk/gtktreeview:
	(gtk_tree_view_move_cursor_up_down):
	If a multi-selection list contains only one item,
	select it on cursor_up or cursor_down.
	Fixes bug #131226.
	[patch from Padraig O'Briain]

2004-08-26  Matthias Clasen  <mclasen@redhat.com>

	Make gdk_window_process_[all]_updates() respect 
	update_freeze_counter  (#144272, Soeren Sandmann)
	
	* gdk/gdkwindow.c (gdk_window_schedule_update): New function to